Enabled news api and fixed column alignment. still needs work

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ body {
     object-fit: cover;
 }
 
+.imgNews {
+    width: 100%;
+}
+
 h1{
 
     font-size: 100px;
